# smart_IoT

./: README.md  pyproject.toml
client/: demo.ino
server/: credentials.txt  db.sqlite3  mqtt_handler.py  steps.txt
server/devicedata/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
server/devicedata/migrations/: 0001_initial.py
server/smart_iot/: asgi.py  settings.py  urls.py  wsgi.py
server/static/: script.js  style.css
server/templates/: graphs.html  home.html  meter.html  meter2.html  set_threshold_data.html
